--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,13 @@ h4, h5, h6 {
   font-size: 1rem;
 }
 
+hc {
+  margin-top: 0;
+  margin-bottom: .5rem;
+  line-height: 1.15;
+  font-size: 0.825rem;
+}
+
 p {
   font-family: "Open Sans", "Helvetica Neue", Helvetica;
   font-weight: 300;
