- Rename people to team - Remove  about and twitter - Change team sort order to  last name - Add resources and research stubs - Add team members and photo placeholder - Add two column layout in index; simplify resources - Update index.html

--- a/style.scss
+++ b/style.scss
@@ -479,13 +479,13 @@ tbody tr:nth-child(odd) th {
   margin-left: 2rem;
 }
 
-.people {
+.team {
   margin: auto;
   text-align: center;
   margin-top: 0.75em;
 }
 
-.list-item-people {
+.list-item-team {
   display: inline-block;
   padding-right: 1em;
 }
