--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -10,13 +10,16 @@
 
     <b>Abstract:</b> <div style="text-align: justify">{{ page.abstract }}</div>
     <br>
-    <b>Paper:</b> <a href="{{ page.journalurl }}" target="_blank"> {{ page.journal }} </a> 
-    {% if page.pubmedurl != null %}   
-    | <a href="{{ page.pubmedurl }}" target="_blank"> Pubmed </a> 
-    {% endif %} 
+    <b>Paper:</b> <a href="{{ page.journalurl }}" target="_blank"> {{ page.journal }} </a>
+    {% if page.doi != null %}
+    | <a href="https://doi.org/{{ page.doi }}" target="_blank">doi: {{ page.doi }} </a>
+    {% endif %}
+    {% if page.pubmedurl != null %}
+    | <a href="{{ page.pubmedurl }}" target="_blank"> Pubmed </a>
+    {% endif %}
     | <a href="{{ page.pdfurl }}" target="_blank"> PDF </a>
     <br>
-    {% if page.code != null %}    
+    {% if page.code != null %}
     <b>Relevant code:</b> <a href="{{ page.code }}" target="_blank"> <i class="fa fa-lg fa-github"></i> </a>
     {% endif %} 
 
